--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -24,18 +24,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progressBarMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="11dp"
         android:layout_marginTop="6dp"
+        app:layout_constraintLeft_toLeftOf="@+id/touchTextView"
+        app:layout_constraintTop_toTopOf="@+id/touchTextView"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        tools:layout_constraintTop_creator="1"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/touchTextView"
         android:layout_width="71dp"
         android:layout_height="62dp"
         android:layout_marginBottom="10dp"
