--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="13dp"
         app:layout_constraintRight_toRightOf="@+id/imageView"
-        android:layout_marginBottom="36dp" />
+        android:layout_marginBottom="44dp"
+        android:layout_marginRight="0dp" />
 
 </android.support.constraint.ConstraintLayout>
 
