--- a/App/DrapeauApp/app/src/main/res/values/styles.xml
+++ b/App/DrapeauApp/app/src/main/res/values/styles.xml
@@ -1,5 +1,12 @@
 <resources>
 
+    <style name="CustomProgressBarHorizontal" parent="android:Widget.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal</item>
+        <item name="android:minHeight">10dip</item>
+        <item name="android:maxHeight">20dip</item>
+    </style>
+
+
     <!-- Base application theme. -->
     <style name="MyTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -9,11 +16,13 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/windowsBackground</item>
         <item name="android:textColorPrimary">@color/windowsBackground</item>
-        <item name="android:buttonStyle">@color/androidButton</item>
-        <item name="android:progressBarStyleHorizontal">@color/spinner</item>
-
+        <item name="android:buttonStyle">@color/colorPrimary</item>
+        <item name="android:progressBarStyleHorizontal">@drawable/custom_progress_bar_horizontal</item>
 
     </style>
+
+
+
 
 
 
