--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -117,7 +117,7 @@
 
             <ProgressBar
                 android:id="@+id/progressBarQuizzImage"
-                style="@android:style/Widget.ProgressBar.Horizontal"
+                style="@style/CustomProgressBarHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_weight="1"
