--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -89,7 +89,7 @@
 
             <ProgressBar
                 android:id="@+id/progressBarQuizzTexte"
-                style="@android:style/Widget.ProgressBar.Horizontal"
+                style="@style/CustomProgressBarHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_marginTop="5dp"
