--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -2,116 +2,135 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RelativeLayoutQuizzTexteFragment"
+    android:id="@+id/RelativeLayoutQuizzImageFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageViewQuizzTexteFragment"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="17dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/textViewQuizzImageFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="26dp"
+        android:width="300dp"
+        android:height="35dp"
+        android:background="#2D7396"
+        android:textAlignment="center"
+        android:textColor="@color/windowsBackground"
+        android:textSize="24sp" />
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayoutQuizzTexteFragment"
+        android:id="@+id/ConstraintLayoutQuizzImageFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/imageViewQuizzTexteFragment"
-        android:layout_marginTop="24dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="140dp">
+        android:layout_below="@+id/textViewQuizzImageFragment"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp">
 
         <LinearLayout
-            android:id="@+id/linearLayoutQuizzTexteFragment"
-            android:layout_width="360dp"
-            android:layout_height="236dp"
-            android:layout_marginBottom="115dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginStart="12dp"
+            android:id="@+id/linearLayoutQuizzImageUne"
+            android:layout_width="337dp"
+            android:layout_height="107dp"
+            android:layout_marginEnd="27dp"
+            android:layout_marginStart="27dp"
             android:layout_marginTop="10dp"
-            android:orientation="vertical"
-            android:weightSum="1"
-            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutQuizzTexteFragmentDeux"
-            app:layout_constraintHorizontal_bias="0.571"
+            android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:layout_constraintBottom_creator="1"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1">
 
             <Button
                 android:id="@+id/buttonQuizzTexteUn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/windowsBackground" />
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.44"
+                android:text="Button" />
 
             <Button
                 android:id="@+id/buttonQuizzTexteDeux"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white" />
-
-            <Button
-                android:id="@+id/buttonQuizzTexteTrois"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white" />
-
-            <Button
-                android:id="@+id/buttonQuizzTexteQuatre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp" />
-
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.44"
+                android:text="Button" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayoutQuizzTexteFragmentDeux"
-            android:layout_width="358dp"
-            android:layout_height="153dp"
-            android:layout_marginEnd="13dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="273dp"
+            android:id="@+id/linearLayoutQuizzImageDeux"
+            android:layout_width="337dp"
+            android:layout_height="107dp"
+            android:layout_marginEnd="27dp"
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="88dp"
             android:orientation="horizontal"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayoutQuizzImageUne"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1"
+            tools:layout_editor_absoluteX="21dp"
+            tools:layout_editor_absoluteY="96dp">
+
+            <Button
+                android:id="@+id/buttonQuizzTexteTrois"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/buttonQuizzTexteQuatre"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Button" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutQuizzImageTrois"
+            android:layout_width="336dp"
+            android:layout_height="193dp"
+            android:layout_marginEnd="22dp"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="46dp"
+            android:orientation="horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutQuizzImageDeux"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1">
 
             <ProgressBar
-                android:id="@+id/progressBarQuizzTexte"
+                android:id="@+id/progressBarQuizzImage"
                 style="@style/CustomProgressBarHorizontal"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
+                android:layout_weight="0.42"
                 android:max="10" />
 
             <TextView
-                android:id="@+id/textView3"
-                android:layout_width="108dp"
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="temps restant" />
-        </LinearLayout>
-    </android.support.constraint.ConstraintLayout>
+                android:layout_weight="0.42"
+                android:text="TextView" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="14dp"
-        android:layout_toStartOf="@+id/imageViewQuizzTexteFragment"
-        android:text="question " />
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
