--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -45,30 +45,66 @@
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1">
 
-            <Button
-                android:id="@+id/buttonQuizzTexteUn"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/windowsBackground" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/buttonQuizzTexteDeux"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white" />
+                <LinearLayout
+                    android:layout_width="175dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
-            <Button
-                android:id="@+id/buttonQuizzTexteTrois"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white" />
+                    <Button
+                        android:id="@+id/buttonQuizzTexteUn"
+                        style="@style/MyBtnStyle"
+                        android:layout_width="160dp"
+                        android:layout_height="95dp"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/windowsBackground"
+                        android:textSize="20sp"
+                        tools:text="testpolice" />
 
-            <Button
-                android:id="@+id/buttonQuizzTexteQuatre"
-                style="@style/Widget.AppCompat.Button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp" />
+                    <Button
+                        android:id="@+id/buttonQuizzTexteTrois"
+                        style="@style/MyBtnStyle"
+                        android:layout_width="160dp"
+                        android:layout_height="95dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="0.13"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+
+                    <Button
+                        android:id="@+id/buttonQuizzTexteDeux"
+                        style="@style/MyBtnStyle"
+                        android:layout_width="160dp"
+                        android:layout_height="95dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/buttonQuizzTexteQuatre"
+                        style="@style/MyBtnStyle"
+                        android:layout_width="160dp"
+                        android:layout_height="95dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="0.22"
+                        android:textSize="20sp" />
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -80,7 +116,7 @@
             android:layout_marginStart="13dp"
             android:layout_marginTop="273dp"
             android:orientation="horizontal"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.423"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -100,8 +136,7 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="108dp"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
