--- a/App/DrapeauApp/app/src/main/res/values/colors.xml
+++ b/App/DrapeauApp/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#a4a8ab</color>
     <color name="navigationBarColor">#2D7396</color>
     <color name="windowsBackground">#fefee2</color>
+    <color name="btnBackground">#2d7396</color>
+    <color name="textColor">#fefee2</color>
 </resources>
