--- a/App/DrapeauApp/app/src/main/res/values/styles.xml
+++ b/App/DrapeauApp/app/src/main/res/values/styles.xml
@@ -7,6 +7,15 @@
     </style>
 
 
+    <style name="MyBtnStyle">
+        <item name="android:bottomLeftRadius">2dp</item>
+        <item name="android:bottomRightRadius">2dp</item>
+        <item name="android:topLeftRadius">2dp</item>
+        <item name="android:topRightRadius">2dp</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:background">@color/btnBackground</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="MyTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
