--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,20 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="25dp">
 
-    <com.felipecsl.gifimageview.library.GifImageView
+    <pl.droidsonroids.gif.GifImageButton
         android:id="@+id/gifImageView"
-        android:layout_width="166dp"
-        android:layout_height="138dp"
-        app:srcCompat="@drawable/GlobeGif"
+        android:layout_width="201dp"
+        android:layout_height="208dp"
+        android:background="@color/windowsBackground"
+        android:src="@drawable/globe"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewTouch"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="171dp"
+        android:layout_marginTop="205dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="173dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.501" />
 
     <ImageView
         android:id="@+id/imageViewTouch"
@@ -36,21 +34,39 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="85dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginBottom="211dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.538" />
 
     <ProgressBar
         android:id="@+id/progressBarMain"
-        style="@style/?android:attr/progressBarStyle"
+        style="@style/android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="29dp"
         app:layout_constraintTop_toBottomOf="@+id/gifImageView"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="0dp"
+        android:layout_height="88dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:text="TOUCH MY FLAG"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/gifImageView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
 
