--- a/App/DrapeauApp/app/src/main/res/layout/activity_resultat.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_resultat.xml
@@ -37,44 +37,43 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/buttonRetourAuMenu"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/background_dark">
+        android:background="@android:color/background_dark"
+        tools:layout_editor_absoluteY="66dp"
+        tools:layout_editor_absoluteX="0dp">
 
         <TextView
             android:id="@+id/textViewScoreActivityResultat"
             android:layout_width="0dp"
-            android:layout_height="37dp"
-            android:layout_marginTop="0dp"
+            android:layout_height="36dp"
             android:background="@android:color/holo_orange_light"
             android:textColor="@android:color/background_dark"
             android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintTop_creator="1"
             tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="0dp"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <LinearLayout
             android:id="@+id/linearLayoutActivityResultat"
             android:layout_width="0dp"
-            android:layout_height="390dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginStart="1dp"
+            android:layout_height="726dp"
             android:orientation="horizontal"
             android:weightSum="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            app:layout_constraintRight_toRightOf="@+id/textViewScoreActivityResultat"
             app:layout_constraintTop_toBottomOf="@+id/textViewScoreActivityResultat"
             tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1">
+            app:layout_constraintLeft_toLeftOf="parent">
 
             <ListView
                 android:id="@+id/listViewActivityResultat"
                 android:layout_width="match_parent"
-                android:layout_height="444dp"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:background="@color/windowsBackground" />
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
