--- a/App/DrapeauApp/app/src/main/res/values/colors.xml
+++ b/App/DrapeauApp/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimary">#2d7396</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#a4a8ab</color>
     <color name="navigationBarColor">#2D7396</color>
