--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -127,10 +127,9 @@
             <ProgressBar
                 android:id="@+id/progressBarQuizzTexte"
                 style="@style/CustomProgressBarHorizontal"
-                android:layout_width="match_parent"
+                android:layout_width="240dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="5dp"
-                android:layout_weight="1"
                 android:max="10" />
 
             <TextView
