--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -40,7 +40,7 @@
         <LinearLayout
             android:id="@+id/linearLayoutQuizzImageUne"
             android:layout_width="337dp"
-            android:layout_height="75dp"
+            android:layout_height="100dp"
             android:layout_marginEnd="27dp"
             android:layout_marginStart="27dp"
             android:layout_marginTop="10dp"
@@ -51,8 +51,8 @@
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1"
-            tools:layout_editor_absoluteY="10dp"
-            tools:layout_editor_absoluteX="23dp">
+            tools:layout_editor_absoluteX="23dp"
+            tools:layout_editor_absoluteY="10dp">
 
             <ImageButton
                 android:id="@+id/imageButtonQuizzImageUne"
@@ -65,14 +65,14 @@
                 android:id="@+id/imageButtonQuizzImageDeux"
                 android:layout_width="162dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:layout_weight="0.05" />
+                android:layout_weight="0.05"
+                android:background="@android:color/transparent" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayoutQuizzImageDeux"
             android:layout_width="337dp"
-            android:layout_height="75dp"
+            android:layout_height="100dp"
             android:layout_marginEnd="27dp"
             android:layout_marginStart="27dp"
             android:layout_marginTop="88dp"
@@ -120,8 +120,14 @@
                 style="@style/CustomProgressBarHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:layout_weight="1"
+                android:layout_weight="1.28"
                 android:max="10" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.85" />
 
         </LinearLayout>
 
