--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -73,8 +73,8 @@
                         android:layout_height="95dp"
                         android:layout_marginTop="5dp"
                         android:layout_weight="0.13"
-                        android:textColor="@android:color/white"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        tools:text="bla" />
 
                 </LinearLayout>
 
@@ -91,8 +91,8 @@
                         android:layout_height="95dp"
                         android:layout_marginBottom="10dp"
                         android:layout_marginLeft="20dp"
-                        android:textColor="@android:color/white"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        tools:text="azerty" />
 
                     <Button
                         android:id="@+id/buttonQuizzTexteQuatre"
@@ -102,7 +102,8 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="5dp"
                         android:layout_weight="0.22"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        tools:text="lu" />
                 </LinearLayout>
             </LinearLayout>
 
